# CerealSerializationExample

./: CMakeLists.txt  main.cpp
cmake/: conan.cmake
